# ZEReader

./: .gitignore  .gitmodules  .pre-commit-config.yaml  0001_module-lvgl.patch  0001_zephyr-lvgl-enable-changing-pixel-format.patch  0002_zephyr-module-lvgl.patch  CMakeLists.txt  Kconfig  README.md  SECURITY.md  west.yml
.github/workflows/: build-docs.yaml  build-zephyr.yaml
app/: CMakeLists.txt  Kconfig  VERSION  prj.conf
app/boards/: rpi_pico.overlay  rpi_pico2_rp2350a_m33.overlay
app/src/: main.c
app/src/epub/: CMakeLists.txt  epub.c  epub.h  sd.c  sd.h  sd_card.c  sd_card.h
app/src/sd/: CMakeLists.txt  sd.c
app/src/ui/: CMakeLists.txt  ZEReaderLogo.c  context.c  context.h  notoserif_14.c  ui.c  ui.h  zereaderlogomarx.c
doc/: Doxyfile  Makefile  conf.py  index.rst  requirements.txt
doc/_doxygen/: groups.dox  main.md
doc/docs/: about.rst  contributing.rst  debugging.rst  getting-started.rst  zephyr.rst
doc/pics/: ZEReader.webp.license
firmware/: CMakeLists.txt  prj.conf  west.yml
firmware/boards/: rpi_pico.overlay
firmware/src/: main.c
firmware/src/ui/: CMakeLists.txt  context.h  ui-notes.c  ui.c  ui.h
include/app/lib/epub/: epub.h
include/app/lib/ui/: context.h  ui.h
include/epub/: epub.h
include/lib/sd/: sd.h
include/lib/ui/logo/: ZEReaderLogo.c  zereaderlogomarx.h
include/sd/: sd.h
include/ui/: context.h  ui.h
lib/: CMakeLists.txt  Kconfig
lib/epub/: CMakeLists.txt  Kconfig  epub.c
lib/sd/: CMakeLists.txt  sd.c
lib/ui/: CMakeLists.txt  context.c  ui.c
zephyr/: module.yml
